fix: component code tantrum (#183)
* fix: component code tantrum

* fix: table scrollbar default

* code example oveflow??

* fix: component docs code snippet overflow

--- a/src/components/ComponentExample/component-example.scss
+++ b/src/components/ComponentExample/component-example.scss
@@ -76,6 +76,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  scrollbar-width: none;
   overflow-x: scroll;
   margin-right: $spacing-05;
 
@@ -102,7 +103,7 @@
   }
 
   @include carbon--breakpoint('md') {
-    overflow-x: auto;
+    overflow-x: visible;
   }
 }
 
